created wishist page

--- a/views/partials/user/navbar.ejs
+++ b/views/partials/user/navbar.ejs
@@ -26,7 +26,7 @@
           </a>
 
           <!-- Favorites -->
-          <a href="/favorites" class="text-gray-700 hover:text-[#F9C22A] text-xl">
+          <a href="/wishlist" class="text-gray-700 hover:text-[#F9C22A] text-xl">
             <i class="fas fa-heart"></i>
           </a>
 
